--- a/app/src/main/res/layout/edit_socio.xml
+++ b/app/src/main/res/layout/edit_socio.xml
@@ -9,30 +9,45 @@
     tools:context=".controller.main.profile.EditSocio"
     android:id="@+id/EditSocio">
 
-    <ImageView
-        android:id="@+id/backButton"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="23dp"
-        android:src="@drawable/ic_left_arrow"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/edit_Socio"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:fontFamily="@font/montserrat"
-        android:gravity="center"
-        android:text="@string/Socio"
-        android:textColor="#000000"
-        android:textSize="20sp"
-        android:textStyle="bold"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/head"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/upper_bar_sub"
+        android:elevation="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/backButton"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_left_arrow" />
+
+
+        <TextView
+            android:id="@+id/edit_Socio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat"
+            android:textColor="@color/white"
+            android:text="@string/edit_my_information"
+            android:textSize="25sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     <!-- <ScrollView
@@ -50,7 +65,7 @@
              android:paddingStart="40dp"
              android:paddingEnd="10dp"
              android:layout_marginTop="50dp"
-             app:layout_constraintTop_toBottomOf="@+id/edit_Socio">
+             app:layout_constraintTop_toBottomOf="@+id/head">
 
              <LinearLayout
                  android:layout_width="match_parent"
@@ -307,278 +322,3 @@
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-    <!--
-
-
-
-
-    mMMMMMMMMMMM
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="-190dp">
-            <TextView
-                android:id="@+id/question1"
-                android:layout_width="122dp"
-                android:layout_height="35dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginStart="25dp"
-                android:layout_marginTop="304dp"
-                android:fontFamily="@font/montserrat"
-                android:text="Age"
-                android:textAlignment="textStart"
-                android:textColor="#8A000000"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <EditText
-                android:id="@+id/age"
-                android:layout_width="93dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="298dp"
-                android:layout_marginEnd="100dp"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:hint="ex; 21"
-                />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="-180dp">
-            <TextView
-                android:id="@+id/titleofscreen1"
-                android:layout_width="122dp"
-                android:layout_height="35dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_centerInParent="true"
-                android:layout_marginStart="25dp"
-                android:layout_marginTop="351dp"
-                android:fontFamily="@font/montserrat"
-                android:text="Height"
-                android:textAlignment="textStart"
-                android:textColor="#8A000000"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-            <EditText
-                android:id="@+id/height"
-                android:layout_width="93dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginTop="343dp"
-                android:layout_marginEnd="71dp"
-                android:hint="ex; 160"
-                android:ems="10"
-                android:inputType="textPersonName" />
-            <TextView
-                android:id="@+id/cm"
-                android:layout_width="122dp"
-                android:layout_height="35dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_centerInParent="true"
-                android:layout_marginStart="25dp"
-                android:layout_marginTop="351dp"
-                android:fontFamily="@font/montserrat"
-                android:text="cm"
-                android:textAlignment="textStart"
-                android:textColor="#8A000000"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_marginRight="50dp"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="-120dp"
-            >
-            <TextView
-                android:id="@+id/three"
-                android:layout_width="123dp"
-                android:layout_height="49dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginStart="25dp"
-                android:layout_marginTop="596dp"
-                android:fontFamily="@font/montserrat"
-                android:text="Cigarette smoker"
-                android:textAlignment="textStart"
-                android:textColor="#8A000000"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-            <Spinner
-                android:id="@+id/smoke"
-                android:layout_width="93dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginTop="599dp"
-                android:layout_marginEnd="70dp"
-                ></Spinner>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="-120dp">
-            <TextView
-                android:id="@+id/textView12"
-                android:layout_width="114dp"
-                android:layout_height="50dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginStart="25dp"
-                android:layout_marginTop="650dp"
-                android:fontFamily="@font/montserrat"
-                android:text="Chronic diseases"
-                android:textAlignment="textStart"
-                android:textColor="#8A000000"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <EditText
-                android:id="@+id/chronic"
-                android:layout_width="93dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginTop="647dp"
-                android:layout_marginEnd="70dp"
-                android:ems="10"
-                android:hint="ex; Diabetes"
-                android:inputType="textPersonName" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="-140dp">
-            <TextView
-                android:id="@+id/two"
-                android:layout_width="122dp"
-                android:layout_height="49dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="543dp"
-                android:fontFamily="@font/montserrat"
-                android:text="Monthly income"
-                android:textAlignment="textStart"
-                android:textColor="#8A000000"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-            <EditText
-                android:id="@+id/income"
-                android:layout_width="93dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginTop="548dp"
-                android:layout_marginEnd="71dp"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:hint="ex; 5000"/>
-            <TextView
-                android:id="@+id/sar"
-                android:layout_width="122dp"
-                android:layout_height="49dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="543dp"
-                android:fontFamily="@font/montserrat"
-                android:text="SAR"
-                android:textAlignment="textStart"
-                android:textColor="#8A000000"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="-150dp">
-            <TextView
-                android:id="@+id/four"
-                android:layout_width="wrap_content"
-                android:layout_height="47dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginStart="25dp"
-                android:layout_marginTop="506dp"
-                android:fontFamily="@font/montserrat"
-                android:text="Marital status"
-                android:textAlignment="textStart"
-                android:textColor="#8A000000"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <Spinner
-                android:id="@+id/married"
-                android:layout_width="93dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="497dp"
-                android:layout_marginEnd="71dp"
-                ></Spinner>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="-160dp">
-            <TextView
-                android:id="@+id/question4"
-                android:layout_width="131dp"
-                android:layout_height="50dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginStart="26dp"
-                android:layout_marginTop="446dp"
-                android:fontFamily="@font/montserrat"
-                android:text="Employment status"
-                android:textAlignment="textStart"
-                android:textColor="#8A000000"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-            <Spinner
-                android:id="@+id/employee"
-                android:layout_width="93dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginTop="448dp"
-                android:layout_marginEnd="70dp"
-                ></Spinner>
-        </LinearLayout>
-
-
-
-        </LinearLayout>
-
-
-    </RelativeLayout>-->
