--- a/app/src/main/res/drawable/ic_more.xml
+++ b/app/src/main/res/drawable/ic_more.xml
@@ -5,11 +5,11 @@
     android:viewportHeight="515.555">
   <path
       android:pathData="m303.347,18.875c25.167,25.167 25.167,65.971 0,91.138s-65.971,25.167 -91.138,0 -25.167,-65.971 0,-91.138c25.166,-25.167 65.97,-25.167 91.138,0"
-      android:fillColor="#000000"/>
+      android:fillColor="#FFFF"/>
   <path
       android:pathData="m303.347,212.209c25.167,25.167 25.167,65.971 0,91.138s-65.971,25.167 -91.138,0 -25.167,-65.971 0,-91.138c25.166,-25.167 65.97,-25.167 91.138,0"
-      android:fillColor="#000000"/>
+      android:fillColor="#FFFF"/>
   <path
       android:pathData="m303.347,405.541c25.167,25.167 25.167,65.971 0,91.138s-65.971,25.167 -91.138,0 -25.167,-65.971 0,-91.138c25.166,-25.167 65.97,-25.167 91.138,0"
-      android:fillColor="#000000"/>
+      android:fillColor="#FFFF"/>
 </vector>
