--- a/app/src/main/res/layout/activity_add_voice_draft_page.xml
+++ b/app/src/main/res/layout/activity_add_voice_draft_page.xml
@@ -12,11 +12,12 @@
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:padding="20dp"
-        android:text="RECORD AUDIO"
+        android:text="@string/record_audio"
+        android:textSize="30sp"
+        style="@style/FirebaseUI.SMSTermsText"
         android:fontFamily="@font/montserrat"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="@android:color/white"
         android:onClick="recordAudio"
-        style="@style/Widget.AppCompat.Button.Borderless"/>
+        android:background="@drawable/main_background"/>
 
 </RelativeLayout>
