--- a/app/src/main/res/layout/activity_google_calendar_connection.xml
+++ b/app/src/main/res/layout/activity_google_calendar_connection.xml
@@ -25,7 +25,7 @@ tools:context=".controller.signup.GoogleCalendarConnection">
     android:layout_marginTop="50dp"
     android:text="@string/google_calendar"
     android:gravity="center"
-    android:textColor="#000000"
+    android:textColor="@color/white"
     android:textSize="25sp" />
 
     <LinearLayout
