--- a/app/src/main/res/layout/activity_welcome_page.xml
+++ b/app/src/main/res/layout/activity_welcome_page.xml
@@ -36,7 +36,7 @@
         android:layout_below="@+id/serene_logo"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="35dp"
-        android:fontFamily="Roboto"
+        android:fontFamily="@font/montserrat"
         android:text="@string/welcome_to_serene"
         android:textAlignment="center"
         android:textSize="18sp"
@@ -71,7 +71,7 @@
         android:layout_below="@+id/register"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"
-        android:fontFamily="Roboto"
+        android:fontFamily="@font/montserrat"
         android:text="@string/or"
         android:textAlignment="center"
         android:textSize="18sp"
