--- a/app/src/main/res/layout/fragment_gad7.xml
+++ b/app/src/main/res/layout/fragment_gad7.xml
@@ -16,7 +16,7 @@
         android:gravity="center"
         android:padding="30dp"
         android:text="@string/gad_7_scale"
-        android:textColor="#000000"
+        android:textColor="@color/white"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
