--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightAccent"
+    android:background="@color/lightGrey"
     tools:context=".MainActivity"
     android:id="@+id/MainActivity"
     android:orientation="vertical"
@@ -59,13 +59,12 @@
         <ImageView
             android:id="@+id/AL_graph"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="240dp"
             android:layout_gravity="center"
             android:layout_marginStart="24dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="24dp"
             android:paddingTop="10dp"
-            android:src="@drawable/test_anxiety_level_graph"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text11" />
