--- a/app/src/main/res/layout/fragment_sociodemo.xml
+++ b/app/src/main/res/layout/fragment_sociodemo.xml
@@ -24,8 +24,8 @@
         android:layout_marginBottom="0dp"
         android:fontFamily="@font/montserrat"
         android:gravity="center"
-        android:text="About You"
-        android:textColor="#000000"
+        android:text="@string/about_you"
+        android:textColor="@color/white"
         android:textSize="25sp" />
 
     <LinearLayout
