--- a/app/src/main/res/layout/location_row.xml
+++ b/app/src/main/res/layout/location_row.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -10,52 +11,72 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#F3F3F3"
-        >
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:orientation="vertical">
 
 
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_weight="4"
-                android:layout_marginBottom="4dp"
-                android:orientation="horizontal">
+            <TextView
+                android:id="@+id/parent_loc"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:text="Name"
+                android:textColor="#000000"
+                android:textSize="18dp"
+                app:layout_constraintEnd_toStartOf="@+id/location_AL"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-                <TextView
-                    android:id="@+id/parent_loc"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:textSize="18dp"
-                    android:text="Name"
-                    android:textColor="#000000" />
-
-                <TextView
-                    android:id="@+id/location_AL"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:textSize="15dp"
-                    android:text="anxietyLevel"
-                    android:textColor="@color/Error"
-                     />
-
-            </LinearLayout>
+            <TextView
+                android:id="@+id/location_AL"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="5dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="anxietyLevel"
+                android:textColor="@color/Error"
+                android:textSize="15dp"
+                app:layout_constraintBottom_toTopOf="@+id/textView4"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/textView4"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp"
-                android:layout_weight="4"
-                android:text="Possible Places :" />
+                android:text="@string/possible_places"
+                app:layout_constraintEnd_toStartOf="@+id/freq"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/parent_loc" />
+
+            <TextView
+                android:id="@+id/freq"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:text="@string/frequency"
+                android:textColor="@color/black"
+                app:layout_constraintEnd_toStartOf="@+id/freqN"
+                app:layout_constraintTop_toBottomOf="@+id/location_AL" />
+
+            <TextView
+                android:id="@+id/freqN"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:text="10"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/location_AL" />
 
             <TextView
                 android:id="@+id/nearestPlaces"
@@ -63,17 +84,13 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="4"
                 android:paddingBottom="5dp"
-                android:text="Place 1 - Place 2" />
+                android:text="Place 1 - Place 2"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-            <View
-                android:id="@+id/divider2"
-                android:layout_width="150dp"
-                android:layout_height="2dp"
-                android:layout_gravity="left"
-                android:background="#1A000000"
-                />
-
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
