--- a/app/src/main/res/layout/profile_page.xml
+++ b/app/src/main/res/layout/profile_page.xml
@@ -10,29 +10,57 @@
     tools:context=".controller.main.profile.PatientProfile"
     android:id="@+id/PatientProfile">
 
-
-    <ImageView
-        android:id="@+id/backButton"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="23dp"
-        android:src="@drawable/ic_left_arrow"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
-    <ImageView
-        android:id="@+id/edit_profile_btn"
-        android:layout_width="33dp"
-        android:layout_height="33dp"
-        android:layout_gravity="end"
-        android:layout_margin="10dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="25dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/head"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/upper_bar_sub"
+        android:elevation="10dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/edit_profile_icon" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/backButton"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_left_arrow" />
+
+
+        <TextView
+            android:id="@+id/my_Doctor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat"
+            android:text="@string/my_profile"
+            android:textColor="@color/white"
+            android:textSize="25sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <ImageView
+            android:id="@+id/edit_profile_btn"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginEnd="25dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_edit" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageView"
@@ -83,7 +111,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="90dp"
         android:background="@drawable/new_white_card"
         android:elevation="15dp"
         android:gravity="center_horizontal"
@@ -98,8 +125,8 @@
             android:layout_height="60dp"
             android:layout_marginTop="30dp"
             android:background="@drawable/delete_button"
-            android:focusable="auto"
             android:elevation="10dp"
+            android:focusable="auto"
             android:orientation="horizontal">
 
             <ImageView
@@ -274,6 +301,7 @@
                 android:layout_height="45dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
+                android:clickable="true"
                 android:fontFamily="@font/montserrat"
                 android:gravity="center_vertical"
                 android:paddingEnd="10dp"
@@ -281,8 +309,7 @@
                 android:textAlignment="textEnd"
                 android:textColor="#66515C6F"
                 android:textSize="15sp"
-                tools:ignore="RtlCompat"
-                android:clickable="true"/>
+                tools:ignore="RtlCompat" />
 
             <ImageView
                 android:id="@+id/go_to3"
@@ -299,13 +326,13 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="10dp"
                 android:layout_weight="1"
+                android:clickable="true"
                 android:fontFamily="monospace"
                 android:paddingTop="10dp"
                 android:text="@string/arabic"
                 android:textAlignment="textEnd"
                 android:textColor="#66515C6F"
-                android:textSize="15sp"
-                android:clickable="true" />
+                android:textSize="15sp" />
 
         </LinearLayout>
 
