--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,12 @@
 
     <dimen name="standard_55">60dp</dimen>
     <dimen name="standard_105">110dp</dimen>
+
+    <dimen name="frame_padding">8dp</dimen>
+    <dimen name="frame_line_width">1dp</dimen>
+    <dimen name="frame_text_size">14sp</dimen>
+
+    <dimen name="line_width">3dp</dimen>
+    <dimen name="radius">6dp</dimen>
+    <dimen name="iner_radius">5dp</dimen>
 </resources>
